[package]
name = "hyperproofs"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "*"
#bindgen = "0.59.2"

[dependencies]
libloading = "*"
ethereum-types = "0.9.2"
keccak-hash = "0.5.0"
#libloading = "0.5"
